--- a/assets/langregion.ini
+++ b/assets/langregion.ini
@@ -28,6 +28,7 @@ uk_UA = "Українська"
 vn_VN = "Vietnamese"
 cz_CZ = "Česky"
 tg_PH = "Tagalog"
+dr_ID = "Bahasa Duri"
 
 [SystemLanguage]
 ja_JP = "JAPANESE"
