Add Finnish to langregion.ini to display correctly as "Suomi"

--- a/assets/langregion.ini
+++ b/assets/langregion.ini
@@ -1,6 +1,7 @@
 ﻿[LangRegionNames]
 ja_JP = "日本語"
 en_US = "English"
+fi_FI = "Suomi"
 fr_FR = "Français"
 es_ES = "Castellano (España)"
 es_LA = "Español (América Latina)"
