--- a/Windows/ppsspp.rc
+++ b/Windows/ppsspp.rc
@@ -356,7 +356,7 @@ BEGIN
         MENUITEM "VSync",                                   ID_OPTIONS_VSYNC
         POPUP "Rendering Resolution"
         BEGIN
-            MENUITEM "&Auto",                               ID_OPTIONS_SCREENAUTO
+            MENUITEM "Auto",                               ID_OPTIONS_SCREENAUTO
             MENUITEM "&1x",                                 ID_OPTIONS_SCREEN1X
             MENUITEM "&2x",                                 ID_OPTIONS_SCREEN2X
             MENUITEM "&3x",                                 ID_OPTIONS_SCREEN3X
